--- a/demo/sample-1.htm
+++ b/demo/sample-1.htm
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="utf-8">
-	<title>Mogcha - Simple Example</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<!--<script src="./src/mogcha.js"></script>-->
-	<script src="./dist/mogcha.bundle.js"></script>
-	<style>
-	.result{ font-size: 0.5em; }
-	.contents h1 { font-size: 2em; }
-	.contents h2 { font-size: 1.5em; }
-	.contents h3 { font-size: 1.17em; }
-	.contents h4 { font-size: 1.12em; }
-	.contents h5 { font-size: .83em; }
-	.contents h6 { font-size: .75em; }
-	.contents{
-		height: 550px;
-		overflow-y:scroll;
-		border: 1px solid #ccc;
-		border-radius: 4px;
-		padding: 9px;
-	}
-	</style>
-	<script>
-		document.addEventListener("DOMContentLoaded",function(){
-			var button = document.getElementById('button')
-			var mogcha = new Mogcha({toc:".toc", context: "#contents-1"});
-			mogcha.build()
-		});
-	</script>
+<meta charset="utf-8">
+<title>Mogcha - Simple Example</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!--<script src="./src/mogcha.js"></script>-->
+<script src="../dist/mogcha.min.js"></script>
+<style>
+.result{ font-size: 0.5em; }
+.contents h1 { font-size: 2em; }
+.contents h2 { font-size: 1.5em; }
+.contents h3 { font-size: 1.17em; }
+.contents h4 { font-size: 1.12em; }
+.contents h5 { font-size: .83em; }
+.contents h6 { font-size: .75em; }
+.contents{
+	height: 550px;
+	overflow-y:scroll;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	padding: 9px;
+}
+.container pre {
+	background-color: #f5f5f5;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	padding: 9px;
+}
+</style>
+<script>
+	document.addEventListener("DOMContentLoaded",function(){
+		var mogcha = new Mogcha({toc:".toc", context: "#contents-1"});
+		mogcha.build()
+	});
+</script>
 </head>
 <body>
 	<div style="background-color:#628AC7;" class="p-5">
@@ -44,7 +49,14 @@
 		</div>
 	</div>
 	<div class="container pt-3">
-		<h1>Table of Contents</h1>
+		<h1>Code</h1>
+<pre>document.addEventListener("DOMContentLoaded",function(){
+	var mogcha = new Mogcha({toc:".toc", context: "#contents-1"});
+	mogcha.build()
+});</pre>
+		<hr>
+		<h1>Result</h1>
+		<h2>Table of Contents</h2>
 		<div class="toc">
 		</div>
 		<hr>
