--- a/demo/sample-2.htm
+++ b/demo/sample-2.htm
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Mogcha - Simple Example</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script src="./src/mogcha.js"></script>
+<script src="../dist/mogcha.min.js"></script>
 <style>
 .result{ font-size: 0.5em; }
 .contents h1 { font-size: 2em; }
@@ -16,6 +16,12 @@
 .contents{
 	height: 550px;
 	overflow-y:scroll;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	padding: 9px;
+}
+.container pre {
+	background-color: #f5f5f5;
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	padding: 9px;
@@ -37,7 +43,6 @@
 </style>
 <script>
 	document.addEventListener("DOMContentLoaded",function(){
-		var button = document.getElementById('button')
 		var mogcha = new Mogcha({
 			toc:".toc", 
 			context: "#contents-1",
@@ -61,6 +66,34 @@
 		</div>
 	</div>
 	<div class="container pt-3">
+		<h1>Code</h1>
+<pre>
+// Javascript
+document.addEventListener("DOMContentLoaded",function(){
+	var mogcha = new Mogcha({
+		toc:".toc", 
+		context: "#contents-1",
+		prependHtml: "&lt;h3&gt;Table of Contents&lt;h3&gt;"
+	});
+	mogcha.build()
+});
+
+// css
+.toc {
+	border: 1px solid #aaa;
+	background: #f9f9f9 none repeat scroll 0 0;
+	border-radius: 0.5rem;
+	padding: 1rem 1rem;
+}
+.toc li, .toc ul, .toc ul li{
+    list-style: outside none none !important;
+}
+.toc>ul{
+	padding-left: 15px;
+}
+</pre>
+		<hr>
+		<h1>Result</h1>		
 		<div class="toc"></div>
 		<hr>
 		<h1 class="mt-5 ">Contents</h1>
