--- a/index.htm
+++ b/index.htm
@@ -30,8 +30,8 @@
 		</div>
 	</div>
 	<div class="container mt-5">
-		<a href="sample-1.htm">간단한 예제</a><br>
-		<a href="sample-2.htm">CSS 적용 예제</a><br>
-		<a href="sample-with-tistory.htm">Tistory 적용 예제</a>
+		<a href="./docs/sample-1.htm">간단한 예제</a><br>
+		<a href="./docs/sample-2.htm">CSS 적용 예제</a><br>
+		<a href="./docs/sample-3.htm">CSS 적용 예제+prepend</a><br>
 	</div>
 </html>
