--- a/index.htm
+++ b/index.htm
@@ -2,36 +2,93 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8">
-<title>Mogcha - Table of Contents</title>
+<title>Moglog - Table of Contents</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <style>
 .container pre {
-	background-color: #f5f5f5;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	padding: 9px;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 9px;
 }
 .container hr{
-	margin-top: 1.725rem;
-	margin-bottom: 1.725rem;
+    margin-top: 1.725rem;
+    margin-bottom: 1.725rem;
 }
+html{overflow-x:hidden;overflow-y:scroll}body{overflow-x:hidden}
 </style>
 </head>
 <body>
-	<div style="background-color:#628AC7;" class="py-5">
-		<div class="container my-5">
-			<h1 class="display-2">Mogcha</h1>
-			<p class="lead">Table of Contents, 목차 만드는 라이브러리</p>
-			<div>
-				<a href="https://github.com/exizt/mogcha" class="badge badge-secondary" target="_blank">Github</a>&nbsp;
-				<a href="https://chosim.asv.kr" class="badge badge-secondary" target="_blank">website</a>&nbsp;
-				<a href="https://e2xist.tistory.com" class="badge badge-secondary" target="_blank">Blog</a>&nbsp;
-			</div>			
-		</div>
-	</div>
-	<div class="container mt-5">
-		<a href="./docs/sample-1.htm">간단한 예제</a><br>
-		<a href="./docs/sample-2.htm">CSS 적용 예제</a><br>
-		<a href="./docs/sample-3.htm">CSS 적용 예제+prepend</a><br>
-	</div>
+  <div style="background-color:#628AC7;" class="py-5">
+    <div class="container my-5">
+      <h1 class="display-2">Moglog</h1>
+      <p class="lead">Table of Contents, 목차 만드는 라이브러리</p>
+      <div>
+          <a href="https://github.com/exizt/moglog" class="badge badge-secondary" target="_blank">Github</a>&nbsp;
+          <a href="https://chosim.asv.kr" class="badge badge-secondary" target="_blank">website</a>&nbsp;
+          <a href="https://e2xist.tistory.com" class="badge badge-secondary" target="_blank">Blog</a>&nbsp;
+      </div>
+    </div>
+  </div>
+  <div class="container mt-5">
+    <h2>예제</h2>
+    <a href="./docs/sample-1.htm">간단한 예제</a><br>
+    <a href="./docs/sample-2.htm">prependHtml</a><br>
+    <a href="./docs/sample-3.htm">targetIn, tocClassName 예제</a><br>
+    <a href="./docs/sample-callback.htm">callback</a><br>
+  </div>
+  <div class="container mt-5">
+    <h2>옵션</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">옵션명</th>
+          <th scope="col">유형</th>
+          <th scope="col">설명</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">target</th>
+          <td>string</td>
+          <td>목차가 들어갈 곳의 Selector</td>
+        </tr>
+        <tr>
+          <th scope="row">contents</th>
+          <td>string</td>
+          <td>읽어들일 곳의 Selector</td>
+        </tr>
+        <tr>
+          <th scope="row">targetIn</th>
+          <td>string</td>
+          <td><code>target</code>대신에 특정 영역의 상단에 자동으로 붙게할 경우</td>
+        </tr>
+        <tr>
+          <th scope="row">anchorNamePrefix</th>
+          <td>string</td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">tocClassName</th>
+          <td>string</td>
+          <td>생성된 목차를 둘러싸는 부분에 추가할 필요가 있는 class명 (기본값: <code>empty string</code>)</td>
+        </tr>
+        <tr>
+          <th scope="row">debug</th>
+          <td>boolean</td>
+          <td>디버깅 옵션 (기본값: <code>false</code>)</td>
+        </tr>
+        <tr>
+          <th scope="row">prependHtml</th>
+          <td>string</td>
+          <td>목차의 앞부분에 붙일 필요가 있는 html (기본값: <code>empty string</code>)</td>
+        </tr>
+        <tr>
+          <th scope="row">callback</th>
+          <td>function</td>
+          <td>목차 생성후 실행될 함수 (기본값: 없음)</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </html>
