--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ html{overflow-x:hidden;overflow-y:scroll}body{overflow-x:hidden}
   </div>
   <div class="container mt-5">
     <h2>예제</h2>
-    <a href="./docs/sample-1.htm">간단한 예제</a><br>
-    <a href="./docs/sample-2.htm">prependHtml</a><br>
-    <a href="./docs/sample-3.htm">targetIn, tocClassName 예제</a><br>
-    <a href="./docs/sample-callback.htm">callback</a><br>
+    <a href="./test/sample-1.html">간단한 예제</a><br>
+    <a href="./test/sample-2.html">상단에 html 추가 예제</a><br>
+    <a href="./test/sample-3.html">tocIn (prepend), tocClass 예제</a><br>
+    <a href="./test/sample-callback.html">callback</a><br>
   </div>
   <div class="container mt-5">
     <h2>옵션</h2>
@@ -49,9 +49,19 @@ html{overflow-x:hidden;overflow-y:scroll}body{overflow-x:hidden}
       </thead>
       <tbody>
         <tr>
-          <th scope="row">target</th>
+          <th scope="row">toc</th>
           <td>string</td>
           <td>목차가 들어갈 곳의 Selector</td>
+        </tr>
+        <tr>
+          <th scope="row">tocIn</th>
+          <td>string</td>
+          <td><code>toc</code>옵션의 selector 영역에서 어디에 위치할 것인지. replace - 덮어씀/prepend - 앞부분에 추가/append - 뒷부분에 추가</td>
+        </tr>
+        <tr>
+          <th scope="row">tocClass</th>
+          <td>string</td>
+          <td>생성된 목차를 둘러싸는 부분에 추가할 필요가 있는 class명 (기본값: <code>empty string</code>)</td>
         </tr>
         <tr>
           <th scope="row">contents</th>
@@ -59,27 +69,12 @@ html{overflow-x:hidden;overflow-y:scroll}body{overflow-x:hidden}
           <td>읽어들일 곳의 Selector</td>
         </tr>
         <tr>
-          <th scope="row">targetIn</th>
-          <td>string</td>
-          <td><code>target</code>대신에 특정 영역의 상단에 자동으로 붙게할 경우</td>
-        </tr>
-        <tr>
-          <th scope="row">anchorNamePrefix</th>
+          <th scope="row">linkPrefix</th>
           <td>string</td>
           <td></td>
         </tr>
         <tr>
-          <th scope="row">tocClassName</th>
-          <td>string</td>
-          <td>생성된 목차를 둘러싸는 부분에 추가할 필요가 있는 class명 (기본값: <code>empty string</code>)</td>
-        </tr>
-        <tr>
-          <th scope="row">debug</th>
-          <td>boolean</td>
-          <td>디버깅 옵션 (기본값: <code>false</code>)</td>
-        </tr>
-        <tr>
-          <th scope="row">prependHtml</th>
+          <th scope="row">header</th>
           <td>string</td>
           <td>목차의 앞부분에 붙일 필요가 있는 html (기본값: <code>empty string</code>)</td>
         </tr>
@@ -87,6 +82,11 @@ html{overflow-x:hidden;overflow-y:scroll}body{overflow-x:hidden}
           <th scope="row">callback</th>
           <td>function</td>
           <td>목차 생성후 실행될 함수 (기본값: 없음)</td>
+        </tr>
+        <tr>
+          <th scope="row">isDebug</th>
+          <td>boolean</td>
+          <td>디버깅 옵션 (기본값: <code>false</code>)</td>
         </tr>
       </tbody>
     </table>
