--- a/test/sample-callback.html
+++ b/test/sample-callback.html
@@ -3,29 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Moglog - Simple Example</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script src="../dist/moglog.min.js"></script>
+<link rel="stylesheet" href="../src/moglog.css">
+<link rel="stylesheet" href="../assets/index.css">
+<script src="../dist/moglog.js"></script>
 <style>
-.result{ font-size: 0.5em; }
-.contents h1 { font-size: 2em; }
-.contents h2 { font-size: 1.5em; }
-.contents h3 { font-size: 1.17em; }
-.contents h4 { font-size: 1.12em; }
-.contents h5 { font-size: .83em; }
-.contents h6 { font-size: .75em; }
-.contents{
-    height: 550px;
-    overflow-y:scroll;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 9px;
-}
-.container pre {
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 9px;
-}
 .s-toc {
     border: 1px solid #aaa;
     background: #f9f9f9 none repeat scroll 0 0;
@@ -42,15 +23,15 @@
 <script>
     document.addEventListener("DOMContentLoaded",function(){
         var moglog = new Moglog({
-            target:".toc", 
-            tocClassName: "s-toc",
+            toc:".toc", 
+            tocClass: "s-toc",
             contents: "#context-1",
             debug: true,
             callback: function(items){
-                if(!items){
-                    document.body.querySelector(".toc-wrap").style.display = "none"
+                if(items){
+                    document.body.querySelector(".toc-result").innerHTML = "Result (" + items.length + ")";
+                    console.log(items)
                 }
-                alert("callback")
             }
         });
         moglog.build()
@@ -58,12 +39,12 @@
 </script>
 </head>
 <body>
-    <div style="background-color:#628AC7;" class="p-5">
-        <div class="container my-5">
-            <h1 class="display-2">Moglog</h1>
+    <div class="head-container-wrap">
+        <div class="container">
+            <h1>Moglog</h1>
             <p class="lead">간단한 CSS 적용 예제 (with bootstrap)</p>
             <div>
-                <a href="../index.htm" class="btn btn-primary">Back</a>
+                <a href="../index.html" class="btn btn-primary">Back</a>
             </div>
         </div>
     </div>
@@ -73,13 +54,14 @@
 document.addEventListener("DOMContentLoaded",function(){
     var moglog = new Moglog({
         toc:".toc", 
-        tocClassName: "s-toc",
-        context: "#context-2",
-        "callback": function(items){
-            if(!items){
-                document.body.querySelector(".toc-wrap").style.display = "none"
+        tocClass: "s-toc",
+        contents: "#context-1",
+        debug: true,
+        callback: function(items){
+            if(items){
+                document.body.querySelector(".toc-result").innerHTML = "Result (" + items.length + ")";
+                console.log(items)
             }
-            alert("callback")
         }
     });
     moglog.build()
@@ -87,7 +69,7 @@ document.addEventListener("DOMContentLoaded",function(){
 </pre>
         <hr>
         <div class="toc-wrap">
-            <h1>Result</h1>
+            <h1 class="toc-result">Result</h1>
             <div class="toc">
             </div>
         </div>
