--- a/test/sample-1.html
+++ b/test/sample-1.html
@@ -5,7 +5,7 @@
 <title>Moglog - Simple Example</title>
 <link rel="stylesheet" href="../src/moglog.css">
 <link rel="stylesheet" href="../assets/index.css">
-<script src="../dist/moglog.js"></script>
+<script src="../dist/moglog.min.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded",function(){
         var moglog = new Moglog({
