--- a/test/test.es5.html
+++ b/test/test.es5.html
@@ -5,7 +5,7 @@
 <title>Moglog - Simple Example</title>
 <link rel="stylesheet" href="../src/moglog.css">
 <link rel="stylesheet" href="../assets/index.css">
-<script src="../dist/moglog.min.js"></script>
+<script src="../dist/moglog.es5.min.js"></script>
 <style>
 .s-toc {
     border: 1px solid #aaa;
