--- a/test/css-test.html
+++ b/test/css-test.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Moglog - Simple Example</title>
+  <title>(css 테스트) Moglog - Table of contents</title>
   <link rel="stylesheet" href="../src/moglog.css">
 </head>
 
 <body>
   <div class="head-container-wrap">
     <div class="container">
-      <h1>TOC</h1>
+      <h1>Moglog - Table of contents</h1>
       <p>css 테스트 (작업용)</p>
     </div>
   </div>
