--- a/test/css-test.html
+++ b/test/css-test.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>(css 테스트) Moglog - Table of contents</title>
-  <link rel="stylesheet" href="../src/moglog.css">
+  <link rel="stylesheet" href="../src/css/moglog.css">
 </head>
 
 <body>
@@ -15,28 +15,29 @@
     </div>
   </div>
   <div class="container">
+    <script type="module">
+      import { Moglog } from '../dist/moglog.js';
+      const moglog = new Moglog({
+        toc: "#toc_first",
+        contents: "#content"
+      })
+      moglog.build()
+    </script>
     <div id="toc_first">
-      <div class="s-toc">
-        <ul>
-          <li><a href="#생물-0"><span class="tocnumber">1.</span> <span class="toctext">생물</span></a>
-            <ul>
-              <li><a href="#동물-1"><span class="tocnumber">1.1.</span> <span class="toctext">동물</span></a>
-                <ul>
-                  <li><a href="#물고기-2"><span class="tocnumber">1.1.1.</span> <span class="toctext">물고기</span></a></li>
-                  <li><a href="#새-3"><span class="tocnumber">1.1.2.</span> <span class="toctext">새</span></a></li>
-                  <li><a href="#포유류-4"><span class="tocnumber">1.1.3.</span> <span class="toctext">포유류</span></a></li>
-                </ul>
-              </li>
-              <li><a href="#식물-5"><span class="tocnumber">1.2.</span> <span class="toctext">식물</span></a>
-                <ul>
-                  <li><a href="#나무-6"><span class="tocnumber">1.2.1.</span> <span class="toctext">나무</span></a></li>
-                  <li><a href="#풀-7"><span class="tocnumber">1.2.2.</span> <span class="toctext">풀</span></a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+    </div>
+  </div>
+  <div class="container" style="display: none;">
+    <div class="content" id="content">
+      <h1>생물</h1>
+      <p>생물...</p>
+      <h2>동물</h2>
+      <h3>물고기</h3>
+      <p>...</p>
+      <h3>새</h3>
+      <h3>포유류</h3>
+      <h2>식물</h2>
+      <h3>나무</h3>
+      <h3>풀</h3>
     </div>
   </div>
 </body>
